--- a/assets/translations/fi.csv
+++ b/assets/translations/fi.csv
@@ -272,6 +272,8 @@ Clear all stored peer connections and restart Nexus,,Settings.Core
 Clear,Tyhjennä,Settings.Core
 Verbose level,Verbose taso,Settings.Core
 Verbose level for logs.,Verbose taso lokeille.,Settings.Core
+Wallet Data Directory Override,,Settings.Core
+Change where the data directory is. This is where the wallet.dat and database are located. Default is blank.,,Settings.Core
 Testnet Iteration,,Settings.Core
 The iteration of Testnet to connect to.,,Settings.Core
 Turn Off,,Settings.Core
@@ -578,7 +580,7 @@ Unnamed token,,User.Tokens
  (Owned by you), (Sinun omistamasi),User.Tokens
 Details,,User.Tokens
 New Token,,User.Tokens.NewToken
-"There is a %{tokenfee}NXS token creation fee, based on supply",,User.Tokens.NewToken
+"There is a %{tokenfee} NXS token creation fee, based on supply",,User.Tokens.NewToken
 Token name,,User.Tokens.NewToken
 Name Creation Fee: %{tokenFee} NXS (Optional),,User.Tokens.NewToken
 New tokens's name,,User.Tokens.NewToken
