--- a/assets/translations/nl.csv
+++ b/assets/translations/nl.csv
@@ -266,6 +266,8 @@ Clear all stored peer connections and restart Nexus,Alle opgeslagen verbindingen
 Clear,Leegmaken,Settings.Core
 Verbose level,Verbose niveau,Settings.Core
 Verbose level for logs.,Niveau voor logboek opnamen.,Settings.Core
+Wallet Data Directory Override,,Settings.Core
+Change where the data directory is. This is where the wallet.dat and database are located. Default is blank.,,Settings.Core
 Testnet Iteration,,Settings.Core
 The iteration of Testnet to connect to.,,Settings.Core
 Turn Off,,Settings.Core
@@ -572,7 +574,7 @@ Unnamed token,,User.Tokens
  (Owned by you),(Uw eigendom),User.Tokens
 Details,Details,User.Tokens
 New Token,Nieuwe Token,User.Tokens.NewToken
-"There is a %{tokenfee}NXS token creation fee, based on supply",,User.Tokens.NewToken
+"There is a %{tokenfee} NXS token creation fee, based on supply",,User.Tokens.NewToken
 Token name,,User.Tokens.NewToken
 Name Creation Fee: %{tokenFee} NXS (Optional),Naamcreatie kostenheffing: %{tokenFee} NXS (Optioneel),User.Tokens.NewToken
 New tokens's name,,User.Tokens.NewToken
