--- a/assets/translations/zh-cn.csv
+++ b/assets/translations/zh-cn.csv
@@ -271,6 +271,8 @@ Clear all stored peer connections and restart Nexus,,Settings.Core
 Clear,,Settings.Core
 Verbose level,详细级别,Settings.Core
 Verbose level for logs.,日志的详细级别。,Settings.Core
+Wallet Data Directory Override,,Settings.Core
+Change where the data directory is. This is where the wallet.dat and database are located. Default is blank.,,Settings.Core
 Testnet Iteration,,Settings.Core
 The iteration of Testnet to connect to.,,Settings.Core
 Turn Off,,Settings.Core
@@ -577,7 +579,7 @@ Unnamed token,,User.Tokens
  (Owned by you),,User.Tokens
 Details,,User.Tokens
 New Token,,User.Tokens.NewToken
-"There is a %{tokenfee}NXS token creation fee, based on supply",,User.Tokens.NewToken
+"There is a %{tokenfee} NXS token creation fee, based on supply",,User.Tokens.NewToken
 Token name,,User.Tokens.NewToken
 Name Creation Fee: %{tokenFee} NXS (Optional),,User.Tokens.NewToken
 New tokens's name,,User.Tokens.NewToken
