--- a/assets/translations/ko.csv
+++ b/assets/translations/ko.csv
@@ -553,7 +553,7 @@ Stake amount,,User.Staking
 The amount of NXS currently staked in the trust account,,User.Staking
 Pending change,,User.Staking
 The pending stake amount change that will be applied on the next Trust transaction,,User.Staking
-Requested in,,User.Staking
+Requested at,,User.Staking
 Expired in,,User.Staking
 Stake Rate,이자율,User.Staking
 The current annual reward rate earned for staking,,User.Staking
@@ -564,10 +564,9 @@ Block Weight,블록 무게,User.Staking
 Stake Weight,스테이크 무게,User.Staking
 "Stake Weight depends on Trust Weight and Block Weight. Along with your Stake amount, Stake Weight affects how frequent you receive a Trust transaction",,User.Staking
 Available Balance,,User.Staking
-Adjust stake amount,,User.Staking
-Waiting For genesis. Time dependent on balance and difficulty.,,User.Staking
-Account on hold for another %{stakeSeconds} Seconds,,User.Staking
 Migrate stake,,User.Staking
+Adjust stake amount,,User.Staking
+Account on hold for another %{stakeSeconds} Seconds,,User.Staking
 Create new token,,User.Tokens
 Lookup a token,,User.Tokens
 Unnamed token,,User.Tokens
