--- a/assets/translations/ro.csv
+++ b/assets/translations/ro.csv
@@ -558,7 +558,7 @@ Stake amount,Sumă miză,User.Staking
 The amount of NXS currently staked in the trust account,Cantitatea de NXS cotă parte în mod curent în contul de încredere,User.Staking
 Pending change,Modificări în așteptare,User.Staking
 The pending stake amount change that will be applied on the next Trust transaction,Suma cotei parte în așteptare ce va fi aplicată la următoarea Tranzacție de Încredere,User.Staking
-Requested in,Solicitat la,User.Staking
+Requested at,,User.Staking
 Expired in,Expiră în,User.Staking
 Stake Rate,Rată miză,User.Staking
 The current annual reward rate earned for staking,Rata recompensei anuale alocată pentru cota parte,User.Staking
@@ -569,10 +569,9 @@ Block Weight,Greutate bloc,User.Staking
 Stake Weight,Greutate miză,User.Staking
 "Stake Weight depends on Trust Weight and Block Weight. Along with your Stake amount, Stake Weight affects how frequent you receive a Trust transaction",,User.Staking
 Available Balance,,User.Staking
-Adjust stake amount,Ajustează cantitatea mizei,User.Staking
-Waiting For genesis. Time dependent on balance and difficulty.,,User.Staking
-Account on hold for another %{stakeSeconds} Seconds,,User.Staking
 Migrate stake,Migrare cotă parte,User.Staking
+Adjust stake amount,Ajustează cantitatea mizei,User.Staking
+Account on hold for another %{stakeSeconds} Seconds,,User.Staking
 Create new token,Crează monedă nouă,User.Tokens
 Lookup a token,,User.Tokens
 Unnamed token,Monedă fără nume,User.Tokens
